# glfw-opengl-cmake-starter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
